# esp32-unified-ota

./: .gitignore  CMakeLists.txt  README.md  extra_script_sizecheck.py  extra_script_version.py  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32s3  sdkconfig.old
.github/workflows/: main.yml
main/: CMakeLists.txt  ble_ota.cpp  ble_ota.h  idf_component.yml  main.cpp  net_ota.cpp  net_ota.h  wifi_app.cpp  wifi_app.h
scripts/: listener.py
src/: CMakeLists.txt  ble_ota.cpp  ble_ota.h  common_log.h  main.cpp  net_ota.cpp  net_ota.h  nvs_config.cpp  nvs_config.h  ota_processor.cpp  ota_processor.h  utils.cpp  utils.h  wifi_app.cpp  wifi_app.h
